# lumiRadio

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  PRIVACY.md  README.md  SONG_CHANGELOG.md  docker-compose.dev.yml  docker-compose.yml
.cargo/: config.toml
.sqlx/: query-06ac3c78c7ef7b4fa95335fcb4bd2913695135482574f74631089ac516f88c6d.json  query-0ff348db5749549572fe6d0333e0d8789e8a2178782f2b34cc7a709807e271a0.json  query-1495dae427d994f774ffa792a7574918309884afb34ca1f38a56f0dd6c47ff42.json  query-152446e8fd6936ee884512bb72e7e654799f7d16ac43621257fd754309516538.json  query-18d3467b553c673d1121aff330fb9857f178e1f5453c9b1277f1d25df4ce7135.json  query-2433259f993ff88a63770d2c44721d66a8dd9c15135535b51fb62456b4e571ad.json  query-26cb4c39fb7e9b96f7ae0e01c5e7d7afe3b3250741674c6a6363eb8bcc7a712c.json  (+32 more)
byers/: CHANGELOG.md  Cargo.toml  Dockerfile  sqlx-data.json
byers/migrations/: 20230424163334_create_cans.down.sql  20230424163334_create_cans.up.sql  20230426085302_create_songs.up.sql  20230501231244_create_played_songs.up.sql  20230507203347_add_duration_to_songs.up.sql  20230612143124_old_bot.up.sql  20230701191034_add_user_last_message_sent.down.sql  20230701191034_add_user_last_message_sent.up.sql  20230702124245_create_server_config.down.sql  20230705192124_add_user_migrated.down.sql  20230705192124_add_user_migrated.up.sql  20230824204426_add_server_config_dice_roll.down.sql  20230830145758_change_song_requests_constraint.down.sql  20230907095314_add_user_grist.down.sql  20230912074912_remove_song_constraints.down.sql  20230912112106_add_songs_file_hash.down.sql  20230912112106_add_songs_file_hash.up.sql  20230914145848_change_user_link_status.up.sql  20230917213203_add_cans_legit.down.sql  20230918213139_add_slcb_currency_user_id.up.sql  20230929145504_add_server_channel_config_hydration_reminder.down.sql
byers/scripts/: docker-entrypoint.sh
byers/src/: app_config.rs  bin_prelude.rs  communication.rs  cooldowns.rs  db.rs  discord.rs  lib.rs  main.rs  oauth2.rs  prelude.rs  telnet_communication.rs
byers/src/commands/: add_stuff.rs  context.rs  currency.rs  help.rs  minigames.rs  mod.rs  request.rs  songs.rs  version.rs  youtube.rs
byers/src/commands/admin/: config.rs  control.rs  import.rs  mod.rs  user.rs
byers/src/commands/minigames/: mod.rs  new_slots.rs  pvp.rs  roll_dice.rs  slots.rs  strife.rs
byers/src/event_handlers/: error.rs  message.rs  mod.rs  ready.rs
byers/src/static/: oauth2_discord.html  oauth2_success.html
docker/: docker-entrypoint.sh
frohike/: Cargo.toml  Dockerfile  sqlx-data.json
frohike/src/: custom_metadata.rs  main.rs
judeharley/: Cargo.toml  sqlx-data.json
judeharley/.sqlx/: query-155a6927743ed441741938a8fc86c3abfdd36ab1c5bf5287359b3c5e5049f38a.json  query-19c1c772cacd5f4106b68d72baeb0e1501edd8711d851d64f20683d01bd42208.json  query-2433259f993ff88a63770d2c44721d66a8dd9c15135535b51fb62456b4e571ad.json  query-288ad976eb9c4561a03fc693c3dd690bda029c8e94d5613dfc9d02ce08554a3c.json  query-2e1d404540fdd5499d6a7dcd9759ce3805fc7178cca51285afb6cf9718a8353d.json  query-32c41fbc1ff0cf0b72e194e20f375d18695b1e67400f887fd012c34456d3ef1b.json  query-35d8954b7a08cc9a2966a11ac122e5da8b48018f9797a973c3dbf60b9fdb795c.json  query-3d60926f4b3c2b43ca86718cd305e614f14950a9eac8decdfea52fb0c45074b1.json  query-4acfb06affe5a65976956ca6f66b2397bb28dc277accb74a37b609691f42ec9d.json  query-54169bbd0dcafefad6674aa012ee8b9e8714e94c781d52f3dc1e758a6e70586c.json  query-7b642430975a78300d298a61931ad5ab83e51fdab1dcb0707611311387a10e90.json  query-99de9dfc50a5b6844c05c7c75cb9370cce06d9b4de2b24bc653da1ae042fb283.json  query-a81a98e1a30461c9a401e90836f8d3ab735dae043369470c369057ce02baa4ca.json  query-aa137d8b16f61a91bf8e929c6c6f2c5c5d866be3d78f824bc126b7c4b1cdc646.json  query-c4dc1e7ef9c93f71a2090099fda8ba762367862130aaaa91b99e4e9a3e86fb89.json  query-d588916133d209cfa0b12f2755fa1933b2281776a9ddcfc70b2b57ed12230e3b.json  query-dba675fc8e629e760c426c351d651d8966169e641a978bc8cfc14cb48e2ffcab.json  query-e94207b5c6af7195df371cab25f380194932e8b84d8c4d391c1fae10eddf1186.json  query-f32e0fd3943180989ee37b9bb286e12699f9d4c6a0f022c50171b1a8e43f21ce.json
judeharley/migrations/: 20230424163326_create_user.up.sql  20230501180248_create_song_requests.down.sql  20230501180248_create_song_requests.up.sql  20230501231244_create_played_songs.down.sql  20230501231244_create_played_songs.up.sql  20230507203347_add_duration_to_songs.down.sql  20230612143124_old_bot.down.sql  20230618213437_default_watched_time.down.sql  20230618213437_default_watched_time.up.sql  20230618215453_fix_user_id_song_requests.down.sql  20230618215453_fix_user_id_song_requests.up.sql  20230702124245_create_server_config.up.sql  20230706232959_create_guild_config.up.sql  20230824204426_add_server_config_dice_roll.up.sql  20230830145758_change_song_requests_constraint.up.sql  20230907095314_add_user_grist.up.sql  20230911132650_add_user_connected_accounts.down.sql  20230911132650_add_user_connected_accounts.up.sql  20230912074912_remove_song_constraints.up.sql  20230914145848_change_user_link_status.down.sql  20230917213203_add_cans_legit.up.sql  20230918213139_add_slcb_currency_user_id.down.sql  20230929145504_add_server_channel_config_hydration_reminder.up.sql  20230930222221_create_server_roles.down.sql  20230930222221_create_server_roles.up.sql  20231004165323_change_songs_add_song_info.down.sql  20231004165323_change_songs_add_song_info.up.sql  20231118174942_change_song_tags_extend_columns.down.sql  20231118174942_change_song_tags_extend_columns.up.sql
judeharley/src/: communication.rs  cooldowns.rs  db.rs  lib.rs  prelude.rs
judeharley/src/maintenance/: indexing.rs  mod.rs
judeharley/src/static/: oauth2_csrf.html
langley/: Cargo.toml  Dockerfile  Rocket.toml  sqlx-data.json
langley/.sqlx/: query-4a5061d9ec57406f2107153c20456f34fa345d8ab6a06689250eaab14c520a25.json  query-7699ad2ba816c8d6483a82d9de26e66ed4f397848a6e662a7db8b609f916330f.json
langley/src/: main.rs
xefros/: Cargo.toml
xtask/: Cargo.toml  sqlx-data.json
xtask/src/: main.rs  slcb.rs
(+12 files in other folders)
