[workspace]
members = ["judeharley", "byers", "langley", "frohike"]
resolver = "2"

[workspace.package]
version = "1.2.0"
authors = ["cozyGalvinism <jean@der-capta.in>"]
edition = "2021"

[workspace.dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "migrate",
    "bigdecimal",
] }
judeharley = { git = "https://github.com/lumiRadio/lumiRadio" }

[profile.dev.package.sqlx-macros]
opt-level = 3
