[package]
name = "byers"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13.3"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "offline",
    "chrono",
    "migrate",
    "bigdecimal",
] }
mini-telnet = "0.1.8"
poise = "0.5.5"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-unwrap = { version = "0.10.0", features = ["log-location"] }
telnet = { git = "https://github.com/Leandros/telnet-rs" }
google-youtube3 = "5.0.2"
lazy_static = "1.4.0"
fred = { version = "6.3.0", features = ["subscriber-client"] }
async-trait = "0.1.71"
num-traits = "0.2.15"
strum = { version = "0.25.0", features = ["derive"] }
rand = "0.8.5"
anyhow = "1.0.72"
