[package]
name = "byers"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13.3"
poise = { version = "0.5.6" }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-unwrap = { version = "0.10.0", features = ["log-location"] }
lazy_static = "1.4.0"
fred = { version = "6.3.0", features = ["subscriber-client"] }
async-trait = "0.1.71"
num-traits = "0.2.15"
strum = { version = "0.25.0", features = ["derive"] }
rand = "0.8.5"
anyhow = "1.0.72"
thiserror = "1.0.48"
tokio-stream = "0.1.14"
once_cell = "1.18.0"
axum = { version = "0.6.20", features = ["macros"] }
async-fred-session = "0.1.5"
axum-sessions = "0.5.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.20", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde_repr = "0.1.16"
futures = "0.3.28"
ellipse = "0.2.0"
situwaition = { version = "0.3.2", features = ["tokio"] }
serde_json = "1.0.107"
judeharley = { git = "https://github.com/lumiRadio/lumiRadio" }
# judeharley = { path = "../judeharley" }
