[package]
name = "judeharley"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
lazy_static = "1.4.0"
fred = { version = "6.3.0", features = ["subscriber-client"] }
async-trait = "0.1.71"
num-traits = "0.2.15"
rand = "0.8.5"
thiserror = "1.0.48"
tokio-stream = "0.1.14"
once_cell = "1.18.0"
reqwest = { version = "0.11.20", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde_repr = "0.1.16"
futures = "0.3.28"
serde_json = "1.0.107"
walkdir = "2.4.0"
audiotags = { git = "https://github.com/lumiRadio/audiotags", version = "0.5.0" }
id3 = "1.8.0"
metadata = "0.1.8"
sha2 = "0.10.8"
m3u = "1.0.0"

[dependencies.sqlx]
workspace = true
