[package]
name = "langley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "macros", "offline", "chrono", "migrate" ] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }

[dependencies.rocket_db_pools]
version = "0.1.0-rc.3"
features = [ "sqlx_postgres" ]
