[package]
name = "xefros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fred-session = "0.1.5"
axum = { version = "0.6.20", features = ["headers", "macros"] }
axum-sessions = "0.5.0"
fred = "6.3.1"
oauth2 = "4.4.1"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "offline",
    "chrono",
    "migrate",
    "bigdecimal",
] }
tokio = { version = "1.32.0", features = ["full"] }
