[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "offline",
    "chrono",
    "migrate",
] }
walkdir = "2.3.3"
audiotags = "0.4.1"
metadata = "0.1.8"
serde = { version = "1.0.164", features = ["derive"] }
csv = "1.2.2"
sqlite = "0.31.0"
serde_json = "1.0.107"
reqwest = { version = "0.11.20", features = ["json"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
